Add word2box to pubs

--- a/_bibliography/mine.bib
+++ b/_bibliography/mine.bib
@@ -98,5 +98,17 @@ slides={akbc2020-slides.pdf},
 video={https://youtu.be/yqP8wjMocAs},
 code={https://github.com/iesl/Boxes_for_Joint_hierarchy_AKBC_2020},
 selected=true,
+abbr={AKBC},
 bibtex_show=true,
+}
+
+@inproceedings{dasgupta2021word2box,
+    title={Word2Box: Learning Word Representation Using Box Embeddings},
+    author={Shib Sankar Dasgupta and Michael Boratko and Shriya Atmakuri and Xiang Li and Dhruvesh Patel and Andrew McCallum},
+    booktitle={ArXiv},
+    year={2021},
+    eprint={2106.14361},
+    archivePrefix={arXiv},
+    primaryClass={cs.CL},
+    url={https://arxiv.org/pdf/2106.14361},
 }
