Remove conf name for under review

--- a/_bibliography/mine.bib
+++ b/_bibliography/mine.bib
@@ -18,7 +18,7 @@ patel2022modeling,
 lee2022structured,
 title={Structured Energy Network as a dynamic loss function. A case study with multi-label Classification},
 author={Jay-Yoon Lee and Dhruvesh Patel and Purujit Goyal and Andrew McCallum},
-booktitle={ICML (Under Review)},
+booktitle={(Under Review)},
 year={2022},
 url={https://openreview.net/forum?id=dEOeQgQTyvt},
 abstract={Belanger et. al. (2016) and Gygli et al. (2017) have shown that an energy network can capture arbitrary dependencies amongst the output variables in structured prediction; however, their reliance on gradient based inference (GBI) makes the inference slow and unstable. To take advantage of the expressivity of energy networks without incurring the high inference cost, in this work, we propose using Structured Energy As Loss (SEAL). This is a novel learning framework that uses energy network as a trainable loss function (loss-net) to train a separate neural network (task-net), which is then used to perform the inference through a forward pass. We establish SEAL as a general framework wherein various learning strategies like margin-based, regression, and noise-contrastive, could be employed to learn the parameters of loss-net. Through extensive evaluation on ten multi-label classification datasets, we demonstrate that SEAL as a general framework provides various useful design choices, is faster at inference than GBI, and leads to significant performance gains over the baselines.},
