--- a/_posts/2019-01-22-vim_setup.md
+++ b/_posts/2019-01-22-vim_setup.md
@@ -3,10 +3,11 @@ layout: post
 title: "VIMing on Mac"
 date: 2019-01-21
 desc: "A setup for using VIM as a python IDE on Mac"
-categories: [Miscellaneous]
+categories: [tools]
 keywords: "python, VIM"
-tags: [VIM]
+tags: [editors, VIM]
 img: /vim_setup/viming_on_mac.png
+thumbnail: assets/img/blog/vim_setup/viming_on_mac.png
 ---
 
 {% if page.include_toc %}
