--- a/_bibliography/mine.bib
+++ b/_bibliography/mine.bib
@@ -4,7 +4,8 @@
 @article{patel2023pretrained,
   title     = {Pretrained Language Models as Visual Planners for Human Assistance},
   author    = {Patel, Dhruvesh and Eghbalzadeh, Hamid and Kamra, Nitin and Iuzzolino, Michael Louis and Jain, Unnat and Desai, Ruta},
-  journal   = {arXiv preprint arXiv:2304.09179},
+  booktitle = {Proceedings of the IEEE/CVF International Conference on Computer Vision (ICCV)},
+  journal = {Proceedings of the IEEE/CVF International Conference on Computer Vision (ICCV)},
   year      = {2023},
   author+an = {1=highlight},
   abbr      = {ICCV},
@@ -12,7 +13,8 @@
   code      = {https://github.com/facebookresearch/VLaMP},
   preview   = {vlamp_teaser.png},
   html      = {/projects/vlamp_iccv_2023},
-  arxiv     = {2304.09179}
+  arxiv     = {2304.09179},
+  pages     = {15302-15314}
 }
 
 @inproceedings{dasgupta2021word2box,
@@ -30,7 +32,7 @@
 @inproceedings{patel2022modeling,
   title       = {Modeling Label Space Interactions in Multi-label Classification using Box Embeddings},
   author      = {Dhruvesh Patel and Pavitra Dangati and Jay-Yoon Lee and Michael Boratko and Andrew McCallum},
-  booktitle   = {International Conference on Learning Representations (To Appear)},
+  booktitle   = {International Conference on Learning Representations},
   year        = {2022},
   url         = {https://openreview.net/forum?id=tyTH9kOxcvh},
   abstract    = {Multi-label classification is a challenging structured prediction task in which a set of output class labels are predicted for each input. Real-world datasets often have natural or latent taxonomic relationships between labels, making it desirable for models to employ label representations capable of capturing such taxonomies. Most existing multi-label classification methods do not do so, resulting in label predictions that are inconsistent with the taxonomic constraints, thus failing to accurately represent the fundamentals of problem setting. In this work, we introduce the multi-label box model (MBM), a multi-label classification method that combines the encoding power of neural networks with the inductive bias and probabilistic semantics of box embeddings (Vilnis, et al 2018).  Box embeddings can be understood as trainable Venn-diagrams based on hyper-rectangles.  Representing labels by boxes rather than vectors, MBM is able to capture taxonomic relations among labels.  Furthermore, since box embeddings allow these relations to be learned by stochastic gradient descent from data, and to be read as calibrated conditional probabilities, our model is endowed with a high degree of interpretability. This interpretability also facilitates the injection of partial information about label-label relationships into model training, to further improve its consistency. We provide theoretical grounding for our method and show experimentally the model's ability to learn the true latent taxonomic structure from data. Through extensive empirical evaluations on both small and large-scale multi-label classification datasets, we show that BBM can significantly improve taxonomic consistency while preserving or surpassing the state-of-the-art predictive performance.},
@@ -46,6 +48,7 @@
   title    = {Structured Energy Network As a Loss},
   author   = {Lee, Jay Yoon and Patel, Dhruvesh and Goyal, Purujit and Zhao, Wenlong and Xu, Zhiyang and McCallum, Andrew},
   journal  = {Advances in Neural Information Processing Systems},
+  booktitle = {Advances in Neural Information Processing Systems},
   volume   = {35},
   pages    = {20862--20875},
   year     = {2022},
