Add new papers and update research

--- a/_bibliography/mine.bib
+++ b/_bibliography/mine.bib
@@ -1,11 +1,34 @@
 ---
 ---
 
+@inproceedings{rozonoyer-minimal-support,
+  title           = {Learning Representations for Hierarchies with Minimal Support},
+  author          = {Benjamin Rozonoyer  and  Michael Boratko and Dhruvesh Patel and Wenlong Zhao and Shib Dasgupta and Hung Le and Andrew McCallum},
+  booktitle       = {In submission},
+  conferenceshort = {NeurIPS},
+  year            = {2024, In Submission},
+  url             = {https://openreview.net/forum?id=YYy71uBCS3},
+  author+an       = {3=highlight}
+}
+
+@inproceedings{language-guided-rl,
+  title           = {Language Guided Exploration for RL Agents in Text Environments},
+  author          = {Hitesh Golchha and Sahil Yerawar and Dhruvesh Patel and Soham Dan and Keerthiram Murugesan},
+  booktitle       = {In submission},
+  conferenceshort = {NAACL (Findings)},
+  selected        = true,
+  code            = {https://github.com/hitzkrieg/drrn-scienceworld-clone},
+  year            = {2024},
+  url             = {https://openreview.net/forum?id=vzt_La7TzhWb},
+  author+an       = {3=highlight}
+}
+
+
 @article{patel2023pretrained,
   title     = {Pretrained Language Models as Visual Planners for Human Assistance},
   author    = {Patel, Dhruvesh and Eghbalzadeh, Hamid and Kamra, Nitin and Iuzzolino, Michael Louis and Jain, Unnat and Desai, Ruta},
   booktitle = {Proceedings of the IEEE/CVF International Conference on Computer Vision (ICCV)},
-  journal = {Proceedings of the IEEE/CVF International Conference on Computer Vision (ICCV)},
+  journal   = {Proceedings of the IEEE/CVF International Conference on Computer Vision (ICCV)},
   year      = {2023},
   author+an = {1=highlight},
   abbr      = {ICCV},
@@ -42,17 +65,17 @@
 }
 
 @inproceedings{lee2022structured,
-  url      = {https://proceedings.neurips.cc/paper_files/paper/2022/hash/83ae75c127e2a3ea3315379020f8c19f-Abstract-Conference.html},
-  abstract = {Belanger & McCallum (2016) and Gygli et al. (2017) have shown that an energy network can capture arbitrary dependencies amongst the output variables in structured prediction; however, their reliance on gradient-based inference (GBI) makes the inference slow and unstable. In this work, we propose Structured Energy As Loss (SEAL) to take advantage of the expressivity of energy networks without incurring the high inference cost. This is a novel learning framework that uses an energy network as a trainable loss function (loss-net) to train a separate neural network (task-net), which is then used to perform the inference through a forward pass. We establish SEAL as a general framework wherein various learning strategies like margin-based, regression, and noise-contrastive, could be employed to learn the parameters of loss-net. Through extensive evaluation on multi-label classification, semantic role labeling, and image segmentation, we demonstrate that SEAL provides various useful design choices, is faster at inference than GBI, and leads to significant performance gains over the baselines.},
-  abbr     = {NeurIPS},
-  title    = {Structured Energy Network As a Loss},
-  author   = {Lee, Jay Yoon and Patel, Dhruvesh and Goyal, Purujit and Zhao, Wenlong and Xu, Zhiyang and McCallum, Andrew},
-  journal  = {Advances in Neural Information Processing Systems},
+  url       = {https://proceedings.neurips.cc/paper_files/paper/2022/hash/83ae75c127e2a3ea3315379020f8c19f-Abstract-Conference.html},
+  abstract  = {Belanger & McCallum (2016) and Gygli et al. (2017) have shown that an energy network can capture arbitrary dependencies amongst the output variables in structured prediction; however, their reliance on gradient-based inference (GBI) makes the inference slow and unstable. In this work, we propose Structured Energy As Loss (SEAL) to take advantage of the expressivity of energy networks without incurring the high inference cost. This is a novel learning framework that uses an energy network as a trainable loss function (loss-net) to train a separate neural network (task-net), which is then used to perform the inference through a forward pass. We establish SEAL as a general framework wherein various learning strategies like margin-based, regression, and noise-contrastive, could be employed to learn the parameters of loss-net. Through extensive evaluation on multi-label classification, semantic role labeling, and image segmentation, we demonstrate that SEAL provides various useful design choices, is faster at inference than GBI, and leads to significant performance gains over the baselines.},
+  abbr      = {NeurIPS},
+  title     = {Structured Energy Network As a Loss},
+  author    = {Lee, Jay Yoon and Patel, Dhruvesh and Goyal, Purujit and Zhao, Wenlong and Xu, Zhiyang and McCallum, Andrew},
+  journal   = {Advances in Neural Information Processing Systems},
   booktitle = {Advances in Neural Information Processing Systems},
-  volume   = {35},
-  pages    = {20862--20875},
-  year     = {2022},
-  selected = true
+  volume    = {35},
+  pages     = {20862--20875},
+  year      = {2022},
+  selected  = true
 }
 
 @inproceedings{eventevent,
