Add hans, update research

--- a/_bibliography/mine.bib
+++ b/_bibliography/mine.bib
@@ -4,11 +4,15 @@
 @inproceedings{rozonoyer-minimal-support,
   title           = {Learning Representations for Hierarchies with Minimal Support},
   author          = {Benjamin Rozonoyer  and  Michael Boratko and Dhruvesh Patel and Wenlong Zhao and Shib Dasgupta and Hung Le and Andrew McCallum},
-  booktitle       = {In submission},
   conferenceshort = {NeurIPS},
-  year            = {2024, In Submission},
-  url             = {https://openreview.net/forum?id=YYy71uBCS3},
-  author+an       = {3=highlight}
+  year            = {2024, To Appear},
+  url             = {https://openreview.net/forum?id=HFS800reZK},
+  author+an       = {3=highlight},
+  journal         = {Advances in Neural Information Processing Systems},
+  booktitle       = {Advances in Neural Information Processing Systems},
+  volume          = {37},
+  pages           = {},
+  selected        = false
 }
 
 @inproceedings{language-guided-rl,
