IBM internship, ILM page, etc.

--- a/_bibliography/mine.bib
+++ b/_bibliography/mine.bib
@@ -1,11 +1,28 @@
 ---
 ---
 
+@inproceedings{ilm,
+  title           = {Insertion Language Models: Sequence Generation with Arbitrary-Position Insertions},
+  author          = {Dhruvesh Patel and Aishwarya Sahoo and Avinash Amballa and Tahira Naseem and Tim Rudner and Andrew McCallum},
+  conferenceshort = {In submission},
+  year            = {2025},
+  url             = {https://arxiv.org/abs/2505.05755},
+  author+an       = {1=highlight},
+  journal         = {arXiv},
+  booktitle       = {In submission},
+  preview         = {ilm_teaser.png},
+  html            = {/projects/ilm},
+  code            = {https://github.com/dhruvdcoder/ILM},
+  volume          = {},
+  pages           = {},
+  selected        = true
+}
+
 @inproceedings{rozonoyer-minimal-support,
   title           = {Learning Representations for Hierarchies with Minimal Support},
   author          = {Benjamin Rozonoyer  and  Michael Boratko and Dhruvesh Patel and Wenlong Zhao and Shib Dasgupta and Hung Le and Andrew McCallum},
   conferenceshort = {NeurIPS},
-  year            = {2024, To Appear},
+  year            = {2024},
   url             = {https://openreview.net/forum?id=HFS800reZK},
   author+an       = {3=highlight},
   journal         = {Advances in Neural Information Processing Systems},
@@ -18,11 +35,14 @@
 @inproceedings{language-guided-rl,
   title           = {Language Guided Exploration for RL Agents in Text Environments},
   author          = {Hitesh Golchha and Sahil Yerawar and Dhruvesh Patel and Soham Dan and Keerthiram Murugesan},
-  booktitle       = {In submission},
+  booktitle       = {Findings of the Association for Computational Linguistics: NAACL 2024},
+  month           = {June},
+  year            = {2024},
+  address         = {Mexico City, Mexico},
+  publisher       = {Association for Computational Linguistics},
   conferenceshort = {NAACL (Findings)},
   selected        = true,
   code            = {https://github.com/hitzkrieg/drrn-scienceworld-clone},
-  year            = {2024},
   url             = {https://openreview.net/forum?id=vzt_La7TzhWb},
   author+an       = {3=highlight}
 }
