--- a/_bibliography/mine.bib
+++ b/_bibliography/mine.bib
@@ -4,18 +4,19 @@
 @inproceedings{ilm,
   title           = {Insertion Language Models: Sequence Generation with Arbitrary-Position Insertions},
   author          = {Dhruvesh Patel and Aishwarya Sahoo and Avinash Amballa and Tahira Naseem and Tim Rudner and Andrew McCallum},
-  conferenceshort = {In submission},
+  conferenceshort = {NeurIPS (SPIGM Workshop)},
   year            = {2025},
   url             = {https://arxiv.org/abs/2505.05755},
   author+an       = {1=highlight},
   journal         = {arXiv},
-  booktitle       = {In submission},
+  booktitle       = {Neurips (SPIGM Workshop)},
   preview         = {ilm_teaser.png},
   html            = {/projects/ilm},
   code            = {https://github.com/dhruvdcoder/ILM},
   volume          = {},
   pages           = {},
-  selected        = true
+  selected        = true,
+  abbr            = {NeurIPS}
 }
 
 @inproceedings{rozonoyer-minimal-support,
@@ -29,7 +30,8 @@
   booktitle       = {Advances in Neural Information Processing Systems},
   volume          = {37},
   pages           = {},
-  selected        = false
+  selected        = false,
+  abbr            = {NeurIPS}
 }
 
 @inproceedings{language-guided-rl,
@@ -44,7 +46,8 @@
   selected        = true,
   code            = {https://github.com/hitzkrieg/drrn-scienceworld-clone},
   url             = {https://openreview.net/forum?id=vzt_La7TzhWb},
-  author+an       = {3=highlight}
+  author+an       = {3=highlight},
+  abbr            = {NAACL}
 }
 
 
